--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,6 +5,9 @@ on:
     - cron: "0 9 * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   refresh-jobs:
     runs-on: ubuntu-latest
@@ -32,3 +35,17 @@ jobs:
           PYTHONUNBUFFERED: "1"
         run: |
           poetry run python -m summer_internships_scraper.main
+
+      - name: Commit and push if changed
+        run: |
+          if [ -z "$(git status --porcelain)" ]; then
+            echo "No changes to commit."
+            exit 0
+          fi
+
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          git add -A
+          git commit -m "chore: refresh jobs list"
+          git push
